RedRobot Arduino class updated and working. RedRobot SerialDevice added initialization bash command. RedRobot TerminalExecutor changed to execute shell commands correctly and write via echo.